# trt_and_snpe_benchmarking

./: .gitignore  .gitmodules  CMakeLists.txt  setupenv.sh
cmake/: SNPE.cmake  TensorRT.cmake
include/: CheckRuntime.hpp  LoadContainer.hpp  LoadInputTensor.hpp  NV21Load.hpp  PerformanceProfile.hpp  PreprocessInput.hpp  SNPEEngine.hpp  SetBuilderOptions.hpp  TRTEngine.hpp  Util.hpp  trt_inference_engine.hpp  utils.h
scripts/: .accuracy_benchmarking.py.swp  .benchmarking_common.py.swp  .prepare_workspace.py.swp  .throughput_benchmarking.py.swp  accuracy_benchmarking.py  benchmarking_common.py  compile_benchmark_data.py  convert_plan.py  create_raws.py  frozen_graphs_to_dlcs.py  frozen_graphs_to_plans.py  memory_benchmarking.py  model_meta.py  prepare_workspace.py  snpe-throughput.sh  snpe_env.sh  throughput_benchmarking.py
src/: CheckRuntime.cpp  LoadContainer.cpp  LoadInputTensor.cpp  NV21Load.cpp  PerformanceProfile.cpp  PreprocessInput.cpp  PySNPE.cpp  PyTensorRT.cpp  SNPEEngine.cpp  SetBuilderOptions.cpp  TRTEngine.cpp  Util.cpp  pyTensorRT.cpp  pybind11_trt.cpp  trt_inference_engine.cpp  uff_to_plan.cpp
